chore: migrate to kts based buildscripts